<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_record_set"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/court3"
    tools:context="softeng.myapp.RecordSetActivity">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        >

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp">
            <TableRow>
                <TextView
                    android:text="Players"/>
                <TextView
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="Set1"
                    android:id="@+id/set1h"/>
                <TextView
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text=" Pts"
                    android:id="@+id/pts1h"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:textSize="30dp"
                    android:textColor="@color/black"
                    android:background="@drawable/custom_divider"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:id="@+id/p1"/>
                <TextView
                    android:textSize="30dp"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:background="@drawable/custom_divider"
                    android:id="@+id/set1pl1"/>
                <TextView
                    android:textSize="30dp"
                    android:textColor="@color/white"
                    android:background="@drawable/pts_background"
                    android:gravity="center"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:id="@+id/ptpl1"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:textSize="30dp"
                    android:textColor="@color/black"
                    android:background="@drawable/custom_divider"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:id="@+id/p2"/>
                <TextView
                    android:textSize="30dp"
                    android:textColor="@color/black"
                    android:background="@drawable/custom_divider"
                    android:gravity="center"
                    android:id="@+id/set1pl2"/>
                <TextView
                    android:textSize="30dp"
                    android:textColor="@color/white"
                    android:background="@drawable/pts_background"
                    android:gravity="center"
                    android:paddingRight="5dp"
                    android:paddingLeft="5dp"
                    android:id="@+id/ptpl2"/>
            </TableRow>
        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textColor="@color/white"
                android:background="#66000000"
                android:id="@+id/player1buttons"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textColor="@color/white"
                android:background="#66000000"
                android:id="@+id/player2buttons"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_gravity="top"
            android:layout_marginBottom="10dp"
            >
            <Button
                android:text="@string/ace"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:id="@+id/acep1"
                android:layout_weight="0.25"
                android:onClick="onClickAce"/>
            <Button
                android:text="@string/fault"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:id="@+id/faultp1"
                android:layout_weight="0.25"
                android:onClick="onClickFault"/>
            <Button
                android:text="@string/ace"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:id="@+id/acep2"
                android:layout_weight="0.25"
                android:onClick="onClickAce"/>
            <Button
                android:text="@string/fault"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:id="@+id/faultp2"
                android:layout_weight="0.25"
                android:onClick="onClickFault"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_gravity="bottom"
            android:layout_marginBottom="10dp" >

            <Button
                android:text="@string/winner"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:id="@+id/winnerp1"
                android:onClick="onClickWinner"
                android:layout_weight="0.5"/>
            <Button
                android:text="@string/winner"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:id="@+id/winnerp2"
                android:onClick="onClickWinner"
                android:layout_weight="0.5"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_gravity="bottom" >

            <Button
                android:text="@string/ferr"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:id="@+id/fcdp1"
                android:layout_weight="0.25"
                android:onClick="onClickFCD"/>
            <Button
                android:text="@string/uerr"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:id="@+id/unfp1"
                android:layout_weight="0.25"
                android:onClick="onClickUNF"/>
            <Button
                android:text="@string/ferr"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:id="@+id/fcdp2"
                android:layout_weight="0.25"
                android:onClick="onClickFCD"/>
            <Button
                android:text="@string/uerr"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:id="@+id/unfp2"
                android:layout_weight="0.25"
                android:onClick="onClickUNF"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_marginTop="25dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="View Stats"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:background="#CCCCCC55"
                android:onClick="onClickStats"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>