<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_stats"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/tennis"
    tools:context="softeng.myapp.StatsActivity">
    <TextView
        android:id="@+id/match_statistics"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:text="MATCH STATISTICS"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_weight="4" />

        <TextView
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_weight="1"
            android:textStyle="bold"
            android:id="@+id/player1" />

        <TextView
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_weight="1"
            android:id="@+id/player2"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:text="@string/aces"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:id="@+id/stat1"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/ace_player1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:paddingRight="2dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/ace_player1_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:background="@color/green"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/ace_player2_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:textColor="@color/black"
            android:background="@color/orange"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/ace_player2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="2dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:text="@string/serve_first"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:id="@+id/stat2"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/fs_player1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:paddingRight="2dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/fs_player1_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:background="@color/green"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/fs_player2_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:textColor="@color/black"
            android:background="@color/orange"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/fs_player2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:paddingLeft="2dp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:text="@string/double_faults"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:id="@+id/stat3"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/double_player1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:paddingRight="2dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/double_player1_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:background="@color/green"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/double_player2_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:textColor="@color/black"
            android:background="@color/orange"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/double_player2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:paddingLeft="2dp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:text="@string/win_first"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:id="@+id/stat4"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/fsw_player1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:paddingRight="2dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/fsw_player1_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:background="@color/green"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/fsw_player2_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:textColor="@color/black"
            android:background="@color/orange"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/fsw_player2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:paddingLeft="2dp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:text="@string/win_second"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:id="@+id/stat5"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/ssw_player1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:paddingRight="2dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/ssw_player1_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:background="@color/green"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/ssw_player2_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:textColor="@color/black"
            android:background="@color/orange"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/ssw_player2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:paddingLeft="2dp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:text="@string/points_won"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:id="@+id/stat6"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/pw_player1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:paddingRight="2dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/pw_player1_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:background="@color/green"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/pw_player2_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:textColor="@color/black"
            android:background="@color/orange"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/pw_player2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:paddingLeft="2dp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:text="@string/winners"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:id="@+id/stat7"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/w_player1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:paddingRight="2dp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/w_player1_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:background="@color/green"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/w_player2_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:textColor="@color/black"
            android:background="@color/orange"
            android:textSize="18sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/w_player2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:paddingLeft="2dp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:text="@string/forced"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:id="@+id/stat8"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/fer_player1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:paddingRight="2dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/fer_player1_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:background="@color/green"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/fer_player2_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:textColor="@color/black"
            android:background="@color/orange"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/fer_player2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:paddingLeft="2dp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:text="@string/unforced"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:id="@+id/stat9"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/unf_player1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:paddingRight="2dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/unf_player1_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:background="@color/green"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/unf_player2_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:textColor="@color/black"
            android:background="@color/orange"
            android:textSize="18sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/unf_player2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:paddingLeft="2dp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>
